plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

bootJar {
    archiveFileName = "app.jar"
}

springBoot {
	buildInfo {
		properties {
			additional = ['commit': providers.environmentVariable('BUILD_COMMIT_SHA').getOrElse('unknown')]
		}
	}
}

group = 'com.weedrice'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencyLocking {
	lockAllConfigurations()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-aspectj'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'com.github.ben-manes.caffeine:caffeine'

	// Querydsl
	implementation 'io.github.openfeign.querydsl:querydsl-jpa:7.5'
	annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:7.5:jpa'
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// SpringDoc OpenAPI (Swagger)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'
	
	// Bucket4j for Rate Limiting
	implementation 'com.bucket4j:bucket4j-core:8.10.1'
	implementation 'nl.martijndwars:web-push:5.1.2'
	// web-push 5.1.2 exposes implementation-scoped types in its public API.
	implementation 'org.apache.httpcomponents:httpasyncclient:4.1.5'
	implementation 'org.bitbucket.b_c:jose4j:0.9.7'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testRuntimeOnly 'com.h2database:h2:2.3.232'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'

	// Spring Mail (Google SMTP)
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// AWS SDK v2 (S3 only)
	implementation platform('software.amazon.awssdk:bom:2.49.6')
	implementation 'software.amazon.awssdk:s3'

	// HTML sanitization
	implementation 'org.jsoup:jsoup:1.23.1'

	// WebP output support for ImageIO-based file variants
	implementation 'com.github.usefulness:webp-imageio:0.11.0'
}

tasks.named('test') {
	useJUnitPlatform()
	maxHeapSize = '1g'
	jvmArgs '--enable-native-access=ALL-UNNAMED'
	finalizedBy tasks.named('jacocoTestReport')
}

tasks.register('postgresSmokeTest', Test) {
	group = 'verification'
	description = 'Runs the opt-in PostgreSQL/Flyway application context smoke test.'
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	maxHeapSize = '1g'
	jvmArgs '--enable-native-access=ALL-UNNAMED'
	useJUnitPlatform()
	environment 'POSTGRES_SMOKE_TEST', 'true'
	filter {
		includeTestsMatching 'com.weedrice.whiteboard.PostgresApplicationContextSmokeTest'
	}
}

tasks.named('jacocoTestReport') {
	dependsOn tasks.named('test')
	reports {
		xml.required = true  // CI/CD에서 사용 가능하도록 XML 리포트 활성화
		csv.required = false
		html.outputLocation = layout.buildDirectory.dir('reports/jacoco/html')
	}
	// 커버리지 검증은 별도로 실행 (실패해도 리포트는 생성)
}

// QueryDSL 생성 Q* 클래스를 JaCoCo 리포트에서 제외 (entity 패키지 등 커버리지에 반영 안 함)
afterEvaluate {
	tasks.named('jacocoTestReport').configure {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it).exclude('**/Q*.class', '**/Q*$*.class')
		}))
	}
}

// 테스트 커버리지 검증 작업
tasks.named('jacocoTestCoverageVerification') {
	dependsOn tasks.named('jacocoTestReport')
	violationRules {
		rule {
			limit {
				minimum = 0.50  // 목표 50% 커버리지
			}
		}
	}
}

tasks.named('jacocoTestCoverageVerification').configure {
	violationRules {
		rule {
			limit {
				counter = 'LINE'
				value = 'COVEREDRATIO'
				minimum = 0.75
			}
			limit {
				counter = 'BRANCH'
				value = 'COVEREDRATIO'
				minimum = 0.55
			}
		}
		rule {
			element = 'CLASS'
			includes = [
				'com.weedrice.whiteboard.domain.post.service.PollService',
				'com.weedrice.whiteboard.domain.attendance.service.AttendanceService',
				'com.weedrice.whiteboard.domain.badge.service.BadgeAwardService',
				'com.weedrice.whiteboard.domain.badge.service.BadgeEvaluationService',
				'com.weedrice.whiteboard.domain.user.service.UserSessionService',
				'com.weedrice.whiteboard.domain.moderation.service.ModerationAuditLogService',
				'com.weedrice.whiteboard.domain.post.service.PostManagerModerationService',
				'com.weedrice.whiteboard.domain.report.service.ReportAutoBlindService',
				'com.weedrice.whiteboard.domain.notification.service.MentionService',
				'com.weedrice.whiteboard.domain.notification.service.KeywordSubscriptionService',
				'com.weedrice.whiteboard.domain.notification.service.PushSubscriptionService'
			]
			limit {
				counter = 'LINE'
				value = 'COVEREDRATIO'
				minimum = 0.80
			}
		}
	}
}

// Querydsl
def querydslDir = "$buildDir/generated/querydsl"

sourceSets {
	main.java.srcDirs += [ querydslDir ]
}

tasks.withType(JavaCompile) {
	options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
	options.compilerArgs.addAll(['-Xlint:deprecation', '-Xlint:unchecked'])
	options.encoding = 'UTF-8'  // Java 소스 파일 인코딩
}

clean.doLast {
	file(querydslDir).deleteDir()
}
